# infra-arcane-scripts.net

./: .envrc  .gitignore  .pre-commit-config.yaml  package.json  pyproject.toml
.changeset/: config.json  nice-pianos-remember.md
.github/workflows/: terraform.yml
openapi/: arcanescripts-oas3.yaml
terraform/: .envrc  _config.tf  _data.tf  _locals.tf  _outputs.tf  _vars.tf  _version.tf  api-auth.tf  apigw-auth.tf  apigw-core-method-render.tf  apigw-core-method-script.tf  apigw-core.tf  dynamodb.tf  invalidate-cache.tf  moved.tf  openapi.tf  openapi.yaml  rest_api.tf  swagger-codingtips.yaml
terraform/lambda-src/: apigw_auth.py
terraform/modules/api_gateway/: gateway_response.tf  method_options.tf  outputs.tf  rest_api.tf  slash-scripts.tf  slash-status.tf  variables.tf
terraform/modules/lambda_function/: lambda.tf  variables.tf
terraform/modules/lambda_function-python/: lambda.tf  outputs.tf  variables.tf
terraform/modules/lambda_function-python/function_code/: lambda.py
terraform/modules/lambda_function/function_code/: index.js
terraform/modules/top-level-method/: main.tf
